--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "homepage": "https://github.com/winnoran/my-project-neusci#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.5.4",
     "nodemon": "^3.0.1"
   }
 }
